feat: Complete Patent Consulting Platform transformation

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "my-v0-project",
+  "name": "patent-consulting-platform",
   "version": "0.1.0",
   "private": true,
+  "description": "KIPRIS API를 활용한 특허 정보 색인 및 신규 스타트업의 초기 시장 진입 컨설팅 서비스",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
@@ -9,7 +10,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@edge-runtime/vm": "latest",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -38,26 +38,16 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-    "@testing-library/dom": "latest",
-    "@testing-library/react": "latest",
-    "@types/debug": "latest",
-    "@vitejs/plugin-react": "latest",
-    "@vitest/browser": "latest",
-    "@vitest/ui": "latest",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "4.1.0",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "8.5.1",
-    "firebase": "latest",
-    "happy-dom": "latest",
     "input-otp": "1.4.1",
-    "jsdom": "latest",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
-    "path": "latest",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
@@ -68,9 +58,22 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "vite": "latest",
-    "vitest": "latest",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "axios": "^1.6.0",
+    "cheerio": "^1.0.0-rc.12",
+    "@langchain/core": "^0.3.0",
+    "@langchain/openai": "^0.1.0",
+    "openai": "^4.0.0",
+    "pdf-parse": "^1.1.1",
+    "mammoth": "^1.6.0",
+    "natural": "^6.10.4",
+    "ml-pca": "^2.1.0",
+    "ml-matrix": "^6.10.4",
+    "d3": "^7.8.5",
+    "three": "^0.162.0",
+    "@types/three": "^0.162.0",
+    "fuse.js": "^7.0.0",
+    "node-html-parser": "^6.1.12"
   },
   "devDependencies": {
     "@types/node": "^22",
