--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"]
-    },
-    "types": ["vitest/globals"]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "functions"]
+  "exclude": ["node_modules"]
 }
