--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@langchain/core": "^0.3.0",
+    "@langchain/openai": "^0.1.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -38,42 +40,42 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@types/three": "^0.162.0",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.6.0",
+    "cheerio": "^1.0.0-rc.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
+    "d3": "^7.8.5",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "8.5.1",
+    "fuse.js": "^7.0.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "mammoth": "^1.6.0",
+    "ml-matrix": "^6.10.4",
+    "ml-pca": "^2.1.0",
+    "natural": "^6.10.4",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
+    "node-html-parser": "^6.1.12",
+    "openai": "^4.0.0",
+    "pdf-parse": "^1.1.1",
+    "quill": "^2.0.3",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.1",
+    "react-quill": "^2.0.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.6",
-    "zod": "^3.24.1",
-    "axios": "^1.6.0",
-    "cheerio": "^1.0.0-rc.12",
-    "@langchain/core": "^0.3.0",
-    "@langchain/openai": "^0.1.0",
-    "openai": "^4.0.0",
-    "pdf-parse": "^1.1.1",
-    "mammoth": "^1.6.0",
-    "natural": "^6.10.4",
-    "ml-pca": "^2.1.0",
-    "ml-matrix": "^6.10.4",
-    "d3": "^7.8.5",
     "three": "^0.162.0",
-    "@types/three": "^0.162.0",
-    "fuse.js": "^7.0.0",
-    "node-html-parser": "^6.1.12"
+    "vaul": "^0.9.6",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^22",
